@@ -1,5 +1,6 @@
 package cli.shady.intellij
 
+import java.io.File
 import java.nio.file.Files
 import kotlin.test.Test
 import kotlin.test.assertEquals
@@ -14,7 +15,10 @@ class ShadyExecutableFinderTest {
         Files.writeString(executable, "#!/bin/sh\n")
         executable.toFile().setExecutable(true)
 
-        assertEquals(executable, ShadyExecutableFinder(home) { null }.find())
+        assertEquals(
+            listOf(executable.toString(), "--ide-shell"),
+            ShadyExecutableFinder(home, appCandidates = emptyList()) { null }.find()?.withIdeShellFlag(),
+        )
     }
 
     @Test
@@ -23,7 +27,10 @@ class ShadyExecutableFinderTest {
         val executable = Files.writeString(home.resolve("shady"), "#!/bin/sh\n")
         executable.toFile().setExecutable(true)
 
-        assertEquals(executable, ShadyExecutableFinder(home) { executable }.find())
+        assertEquals(
+            listOf(executable.toString(), "--ide-shell"),
+            ShadyExecutableFinder(home, pathLookup = { executable }, appCandidates = emptyList()).find()?.withIdeShellFlag(),
+        )
     }
 
     @Test
@@ -31,6 +38,52 @@ class ShadyExecutableFinderTest {
         val home = Files.createTempDirectory("shady-plugin-home")
         val file = Files.writeString(home.resolve("shady"), "not executable")
 
-        assertNull(ShadyExecutableFinder(home) { file }.find())
+        assertNull(ShadyExecutableFinder(home, pathLookup = { file }, appCandidates = emptyList()).find())
+    }
+
+    @Test
+    fun `discovers mac app bundle without hardcoding shady jar version`() {
+        val home = Files.createTempDirectory("shady-plugin-home")
+        val appBundle = home.resolve("Applications/Shady.app")
+        val appDirectory = appBundle.resolve("Contents/app")
+        Files.createDirectories(appDirectory)
+        val shadyJar = Files.writeString(appDirectory.resolve("shady-2.4.6-any-hash.jar"), "")
+        val dependencyJar = Files.writeString(appDirectory.resolve("kotlin-stdlib.jar"), "")
+        val java = Files.writeString(home.resolve("java"), "#!/bin/sh\n")
+        java.toFile().setExecutable(true)
+        Files.writeString(
+            appDirectory.resolve("Shady.cfg"),
+            """
+            |[Application]
+            |app.classpath=${'$'}APPDIR/${shadyJar.fileName}
+            |app.mainclass=cli.shady.MainKt
+            |app.classpath=${'$'}APPDIR/${dependencyJar.fileName}
+            |
+            |[JavaOptions]
+            |java-options=--enable-native-access=ALL-UNNAMED
+            |java-options=-Dskiko.library.path=${'$'}APPDIR
+            |
+            |[ArgOptions]
+            |arguments=start
+            """.trimMargin(),
+        )
+
+        assertEquals(
+            listOf(
+                java.toString(),
+                "--enable-native-access=ALL-UNNAMED",
+                "-Dskiko.library.path=$appDirectory",
+                "-cp",
+                listOf(shadyJar, dependencyJar).joinToString(File.pathSeparator) { it.toString() },
+                "cli.shady.MainKt",
+                "--ide-shell",
+            ),
+            ShadyExecutableFinder(
+                home = home,
+                pathLookup = { null },
+                appCandidates = listOf(appBundle),
+                javaLookup = { java },
+            ).find()?.withIdeShellFlag(),
+        )
     }
 }
